// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remark-deflist should parse a basic definition list 1`] = `"<dl><dt>Term 1</dt><dd>Definition 1</dd></dl>"`;

exports[`remark-deflist should parse a definition list with continuation 1`] = `
"<dl><dt>Term 1</dt><dd>Definition
with continuation.</dd></dl>"
`;

exports[`remark-deflist should parse a definition list with inline markup 1`] = `"<dl><dt>Term <em>1</em></dt><dd>Definition <strong>1</strong></dd></dl>"`;

exports[`remark-deflist should parse a definition list with lazy continuation 1`] = `
"<dl><dt>Term 1</dt><dd>Definition
with lazy continuation.</dd></dl>"
`;

exports[`remark-deflist should parse a definition list with multiple descriptions (#9) 1`] = `"<dl><dt>Multiple descriptions</dt><dd>Description <strong>1</strong></dd><dd>Description 2</dd></dl>"`;

exports[`remark-deflist should parse a definition list with no space between the term and the descriptions (#7) 1`] = `"<dl><dt>Term <strong>1</strong></dt><dd>Definition <strong>bold</strong> 1</dd><dd>Definition 2</dd></dl>"`;

exports[`remark-deflist should parse a document with other elements 1`] = `
"<dl><dt>Definition List</dt><dd>Definition 1</dd></dl>
<p>This paragraph follows the definition list.</p>"
`;

exports[`remark-deflist should parse a document with several subsequent definition lists (#10) 1`] = `"<dl><dt>Definition List 1</dt><dd>Description 1</dd><dt>Definition List 2</dt><dd>Description 1</dd><dt>Definition List 3</dt><dd>Description 1</dd></dl>"`;
